--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,31 @@ plugins {
     id 'java'
 }
 
-group = 'org.example'
+group = 'com.board'
 version = '1.0-SNAPSHOT'
+
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // JPA (Jakarta Persistence API)
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // JDBC Driver MySQL
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    testImplementation 'org.mockito:mockito-core:5.2.0'
+    // HikariCP para pool de conexões (opcional)
+    implementation 'com.zaxxer:HikariCP:5.1.0'
+
+    // JUnit para testes
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
